# age_progression

./: CMakeLists.txt  README.md
apps/: CMakeLists.txt
apps/get-gradient/: CMakeLists.txt  get-gradient.cpp
apps/warp-demo/: CMakeLists.txt  fold.cpp  fold.hpp  warp-demo.cpp
data/: bad_model_reprojection.xcf  stm_2d_pts.txt  stm_3d_pts.txt
docs/: age_detection.tex  age_prediction.tex  biblio.tex  bibliography.bib  conclusion.tex  includes.tex  intro.tex  pipeline.tex  presentation.tex  stat_calc.awk  work.tex
warp/: CMakeLists.txt
warp/include/: calib.h  fold.hpp  util.hpp  util_calib.h  warp.hpp
warp/src/: calib.cpp  fold.cpp  util.cpp  util_calib.cpp  warp.cpp  warp_test.cpp
warp_to_frontal/: CMakeLists.txt
warp_to_frontal/include/: warpfront.hpp
warp_to_frontal/src/: warpfront.cpp  warpfront_test.cpp
